# spotify-api-plusplus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  spotify-plusplus.cbp
examples/: CMakeLists.txt  main.cpp
spotify/: CMakeLists.txt  SpotifyAPI.cpp  SpotifyAPI.h  SpotifyService.cpp  SpotifyService.h
spotify/models/: Album.cpp  Album.h  AlbumSimple.cpp  AlbumSimple.h  Artist.cpp  Artist.h  ArtistSimple.h  AudioFeatures.cpp  AudioFeatures.h  Category.cpp  Category.h  Copyright.h  Cursor.h  CursorPager.h  Error.cpp  Error.h  Followers.cpp  Followers.h  Image.cpp  Image.h  Pager.h  Playlist.cpp  Playlist.h  PlaylistSimple.cpp  PlaylistSimple.h  PlaylistTrack.cpp  PlaylistTrack.h  Recommendations.h  RecommendationsSeed.h  SavedAlbum.h  SavedTrack.cpp  SavedTrack.h  Track.cpp  Track.h  TrackLink.cpp  TrackLink.h  TrackSimple.h  User.cpp  User.h  UserPublic.cpp  (+1 more)
src/: CMakeLists.txt  SpotifyAPI.cpp  SpotifyAPI.h
src/models/: Album.cpp  Album.h  AlbumSimple.cpp  AlbumSimple.h  Artist.cpp  Artist.h  ArtistSimple.cpp  ArtistSimple.h  AudioFeatures.cpp  AudioFeatures.h  Category.cpp  Category.h  Context.h  Copyright.cpp  Copyright.h  CurrentlyPlayingContext.cpp  CurrentlyPlayingContext.h  CurrentlyPlayingTrack.cpp  CurrentlyPlayingTrack.h  Cursor.cpp  Cursor.h  CursorPager.h  Device.h  Error.cpp  Error.h  Followers.cpp  Followers.h  Image.cpp  Image.h  Pager.h  PlayHistoryObject.cpp  PlayHistoryObject.h  Playlist.cpp  Playlist.h  PlaylistSimple.cpp  PlaylistSimple.h  PlaylistTrack.cpp  PlaylistTrack.h  Recommendations.cpp  Recommendations.h  (+16 more)
src/utils/: CurlException.h  CurlUtils.h  SpotifyException.h
tests/: TestEndpoints.cpp  TestGetAlbum.cpp
